# ConfiguringIP

configuring_network_gui/: CMakeLists.txt
sdk/: CMakeLists.txt  configuring_network.cpp  configuring_network.h
